--- a/pagination/Acerca de/index.html
+++ b/pagination/Acerca de/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My Blog - Valentín Trevisiol Montiel</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../../index.css">
   <!-- https://material.io/resources/icons/?style=baseline -->
 <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
       rel="stylesheet">
@@ -25,14 +25,14 @@
 <body>
   <header>
     <div class="logo">
-      <a href="./index.html">DonTrevi</a>
+      <a href="../../index.html">DonTrevi</a>
     </div>
     <nav id="menu">
       <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./pagination/trabajos/index.html">Trabajos</a></li>
-        <li><a href="./pagination/Acerca de/index.html">Acerca de</a></li>
-        <li><a href="./pagination/Contacto/index.html">Contacto</a></li>
+        <li><a href="../../index.html">Inicio</a></li>
+        <li><a href="../trabajos/index.html">Trabajos</a></li>
+        <li><a href="./index.html">Acerca de</a></li>
+        <li><a href="../Contacto/index.html">Contacto</a></li>
         <li>
           <button class="switch" id="bdark">
             <span class="material-icons-outlined">
@@ -51,12 +51,8 @@
 
   </header>
 
-  <h2>Bienvenidos a mi blog!</h2>
+  <h2>Acerca de... mi</h2>
 
-
-  <pre>Por favor, sientase libre de navegar con total libertad y cualquier pregunta que tenga, no dude en in al apartado
-  de <a href="./pagination/Contacto/index.html" style="text-decoration: none;"><b style="color: #c62971;">Contacto</b></a> para preguntarme lo que usted deseé.</pre>
-
-  <script src="index.js"></script>
+  <script src="../../index.js"></script>
 </body>
 </html>
