Boton darkmode posicionado correctamente

--- a/index.html
+++ b/index.html
@@ -27,23 +27,20 @@
     <div class="logo">
       <a href="./index.html">DonTrevi</a>
     </div>
+
     <nav id="menu">
       <ul>
         <li><a href="./index.html">Inicio</a></li>
         <li><a href="./pagination/trabajos/index.html">Trabajos</a></li>
         <li><a href="./pagination/Acerca de/index.html">Acerca de</a></li>
         <li><a href="./pagination/Contacto/index.html">Contacto</a></li>
-        <li>
-          <button class="switch" id="bdark">
-            <span class="material-icons-outlined">
-              light_mode
-            </span>
-            <span class="material-icons-outlined">
-              nightlight_round
-            </span>
-          </button>
-        </li>
+        <li><button class="switch" id="bdark">
+          <span class="material-icons-outlined">light_mode</span>
+          <span class="material-icons-outlined">nightlight_round</span>
+        </button></li><br><br>
+        <li></li>
       </ul>
+
     </nav>
     <div class="menu-toggle">
       <span id='burguer_menu' class="material-icons-outlined">view_headline</span>
