--- a/pagination/Contacto/index.html
+++ b/pagination/Contacto/index.html
@@ -33,16 +33,11 @@
         <li><a href="../trabajos/index.html">Trabajos</a></li>
         <li><a href="../Acerca de/index.html">Acerca de</a></li>
         <li><a href="./index.html">Contacto</a></li>
-        <li>
-          <button class="switch" id="bdark">
-            <span class="material-icons-outlined">
-              light_mode
-            </span>
-            <span class="material-icons-outlined">
-              nightlight_round
-            </span>
-          </button>
-        </li>
+        <li><button class="switch" id="bdark">
+          <span class="material-icons-outlined">light_mode</span>
+          <span class="material-icons-outlined">nightlight_round</span>
+        </button></li><br><br>
+        <li></li>
       </ul>
     </nav>
     <div class="menu-toggle">
