--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
   <h2>Bienvenidos a mi blog!</h2>
 
 
-  <pre>Por favor, sientase libre de navegar con total libertad y cualquier pregunta que tenga, no dude en in al apartado
+  <div>
+    <pre>Por favor, sientase libre de navegar con total libertad y cualquier pregunta que tenga, no dude en in al apartado
   de <a href="./pagination/Contacto/index.html" style="text-decoration: none;"><b style="color: #c62971;">Contacto</b></a> para preguntarme lo que usted deseé.</pre>
+  </div>
 
   <script src="index.js"></script>
 </body>
