--- a/pagination/Contacto/index.html
+++ b/pagination/Contacto/index.html
@@ -48,6 +48,24 @@
 
   <h2>Contacto</h2>
 
+  <div><p style="text-align: center;">Si tienes alguna inquietud, puedes usar este formulario para contactarme. O si prefieres, puedes seguirme en mis redes sociales</p></div>
+  <form action="">
+    <p for="">Nombre:</p>
+    <input type="text" class="field" placeholder="Nombre..."> <br/>
+
+    <p for="">Correo electrónico:</p>
+    <input type="text" class="field" placeholder="Correo electrónico..."> <br/>
+
+    <p for="">Asunto:</p>
+    <input type="text" class="field" placeholder="Asunto..."><br/><br/>
+
+    <p for="">Mensaje:</p>
+    <textarea class="field"></textarea><br/><br/>
+
+    <p class="center-content">
+      <input type="submit" class="btnSubmit" value="Enviar datos..."><br/>
+    </p>
+  </form>
   <script src="../../index.js"></script>
 </body>
 </html>
